--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,10 @@
 
 Entries in this file are in reverse chronological order.
 
+### 2015-11-12
+
+* JSON medatada updated to match the new schemas.
+
 ### 2015-11-08
 
 * JSON metadata converted from XML and updated
